--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <nav>
       <ul>
         <li><a href="#">About</a></li>
-        <li><a href="#">Portfolio</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="#portfolio">Portfolio</a></li>
+        <li><a href="#contact">Contact</a></li>
       </ul>
     </nav>
     <main>
@@ -23,7 +23,7 @@
         <a href="https://www.linkedin.com/in/jeff-irwin-333a7a64/" target="_blank">LinkedIn</a>
         <a href="https://github.com/geenious" target="_blank">GitHub</a>
       </section>
-      <section class="portfolio">
+      <section class="portfolio" id="portfolio">
         <h1>Portfolio</h1>
         <p>below you will find some of my recent projects</p>
         <ul>
@@ -35,7 +35,7 @@
           <li>Project 6</li>
         </ul>
       </section>
-      <section class="contact">
+      <section class="contact" id="contact">
         <h1>Contact Me</h1>
         <p>I am always excepting web design work. Please do not hesitate to reach out.</p>
         <ul class="contact-info">
