added a lot of styling

--- a/index.html
+++ b/index.html
@@ -3,37 +3,47 @@
   <head>
     <meta charset="utf-8">
     <title>Jeff Irwin | Designer</title>
-    <link rel="stylesheet" href="css/normalize.css">
+    <!-- <link rel="stylesheet" href="css/normalize.css"> -->
     <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css">
+    <script src="https://use.fontawesome.com/1008733f82.js"></script>
   </head>
   <body>
     <nav>
+      <div id='headshot'>
+        <img src='img/bwHeadshot.jpg'>
+      </div>
       <ul>
         <li><a href="#">About</a></li>
         <li><a href="#portfolio">Portfolio</a></li>
         <li><a href="#contact">Contact</a></li>
+        <li><a href="http://www.jeffirwin.me/">Blog</a></li>
       </ul>
     </nav>
     <main>
       <section class="about">
-        <h1>Jeff Irwin</h1>
-        <p>welcome to my protfolio site<br>I'm learning to code in hopes of begining a career as a web designer</p>
-        <a href="https://www.freecodecamp.com/geenious" target="_blank">freecodecamp</a>
-        <a href="https://www.linkedin.com/in/jeff-irwin-333a7a64/" target="_blank">LinkedIn</a>
-        <a href="https://github.com/geenious" target="_blank">GitHub</a>
+        <h1>JEFF IRWIN</h1>
+        <p>web developer</p>
+        <div id='social'>
+          <a href="https://www.linkedin.com/in/jeff-irwin-333a7a64/" target="_blank"><i class="fa fa-linkedin fa-4x" aria-hidden="true"></i></a>
+          <a href="https://github.com/geenious" target="_blank"><i class="fa fa-github fa-4x" aria-hidden="true"></i></a>
+        </div>
+
       </section>
-      <section class="portfolio" id="portfolio">
+      <section class="portfolio" id='portfolio'>
         <h1>Portfolio</h1>
-        <p>below you will find some of my recent projects</p>
+        <p>my recent work & current projects</p>
         <ul>
-          <li>Project 1</li>
-          <li>Project 2</li>
-          <li>Project 3</li>
-          <li>Project 4</li>
-          <li>Project 5</li>
-          <li>Project 6</li>
+          <a href='https://geenious.github.io/bent-creek-ceramics/index.html'><li id='project1'></li></a>
+          <a id='project2' href='https://geenious.github.io/theCalc/'><li></li></a>
+          <a href='https://geenious.github.io/mysteryWord/'><li id='project3'></li></a>
         </ul>
+        <section id='skills'>
+          <img src='img/HTML5.png'>
+          <img src='img/css3.png'>
+          <img src='img/javascript2.png'>
+          <img src='img/nodejs-icon.svg'>
+        </section>
       </section>
       <section class="contact" id="contact">
         <h1>Contact Me</h1>
