--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <ul>
           <a href='https://geenious.github.io/bent-creek-ceramics/index.html'><li id='project1'></li></a>
           <a id='project2' href='https://geenious.github.io/theCalc/'><li></li></a>
-          <a href='https://geenious.github.io/mysteryWord/'><li id='project3'></li></a>
+          <a href="https://mystery-word-game2017.herokuapp.com/"><li id='project3'></li></a>
         </ul>
         <section id='skills'>
           <img src='img/HTML5.png'>
