changed links to open new tab

--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
         <h1>Portfolio</h1>
         <p>my recent work & current projects</p>
         <ul>
-          <a href='https://geenious.github.io/bent-creek-ceramics/index.html'><li id='project1'></li></a>
-          <a id='project2' href='https://geenious.github.io/theCalc/'><li></li></a>
-          <a href="https://mystery-word-game2017.herokuapp.com/"><li id='project3'></li></a>
+          <a href='https://geenious.github.io/bent-creek-ceramics/index.html' target="_blank"><li id='project1'></li></a>
+          <a id='project2' href='https://geenious.github.io/theCalc/' target="_blank"><li></li></a>
+          <a href="https://mystery-word-game2017.herokuapp.com/"><li id='project3' target="_blank"></li></a>
         </ul>
         <section id='skills'>
           <img src='img/HTML5.png'>
