fixed resume link, added sendgrid from contact email

--- a/public/index.html
+++ b/public/index.html
@@ -50,7 +50,7 @@
       <section class="contact" id="contact">
         <h1>Contact Me</h1>
         <div id='contactForm'>
-          <form action='./contact.php' method='post'>
+          <form action='/sendemail' method='post'>
             <input type='text' name='name' placeholder='Name'>
             <input type='email' name='email' placeholder='Email'>
             <textarea rows='10' name='message' placeholder='Message'></textarea>
