change to meta tag

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css">
     <script src="https://use.fontawesome.com/1008733f82.js"></script>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
   </head>
   <body>
     <nav>
