added react logo

--- a/public/index.html
+++ b/public/index.html
@@ -46,6 +46,7 @@
           <img src='img/css3.png'>
           <img src='img/javascript.png'>
           <img src='img/nodejs-icon.svg'>
+          <img src='img/react-logo.png'>
         </section>
       </section>
       <section class="contact" id="contact">
