updated portfolio section

--- a/public/index.html
+++ b/public/index.html
@@ -37,16 +37,25 @@
         <h1>Portfolio</h1>
         <p>my recent work & current projects</p>
         <ul>
-          <a href='https://geenious.github.io/bent-creek-ceramics/index.html' target="_blank"><li id='project1'></li></a>
-          <a id='project2' href='https://geenious.github.io/theCalc/' target="_blank"><li></li></a>
-          <a href="https://mystery-word-game2017.herokuapp.com/"><li id='project3' target="_blank"></li></a>
+          <a id='project1' href='https://geenious.github.io/bent-creek-ceramics/index.html' target="_blank">
+            <li>Professional Mockup</li>
+          </a>
+          <a id='project2' href='https://geenious.github.io/theCalc/' target="_blank">
+            <li>JavaScript Calculator</li>
+          </a>
+          <a id='project3' target="_blank" href="https://mystery-word-game2017.herokuapp.com/">
+            <li>Node.js Hangman Game</li>
+          </a>
+          <a id='project4' target='_blank' href='https://nasa-api-geenious.herokuapp.com/'>
+            <li>NASA Search - Created with React</li>
+          </a>
         </ul>
-        <section id='skills'>
-          <img src='img/HTML5.png'>
-          <img src='img/css3.png'>
-          <img src='img/javascript.png'>
+        <section class='skills'>
+          <img id='code' src='img/code.png'>
           <img src='img/nodejs-icon.svg'>
           <img src='img/react-logo.png'>
+          <img src='img/sass.png'>
+          <img src='img/mongodb.png'>
         </section>
       </section>
       <section class="contact" id="contact">
