--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,7 @@
       <section class="portfolio" id='portfolio'>
         <h1>Portfolio</h1>
         <p>my recent work & current projects</p>
-        <ul>
+        <ul class='project-list'>
           <a id='project1' href='https://geenious.github.io/bent-creek-ceramics/index.html' target="_blank">
             <li>Professional Mockup</li>
           </a>
@@ -74,5 +74,6 @@
       <p>&copy; 2017 Jeff Irwin.<a href="https://www.linkedin.com/in/jeff-irwin-333a7a64/" target="_blank"><i id='footericon' class="fa fa-linkedin fa-2x" aria-hidden="true"></i></a>
       <a href="https://github.com/geenious" target="_blank"><i id='footericon' class="fa fa-github fa-2x" aria-hidden="true"></i></a></p>
     </footer>
+    <script type="text/javascript" src="scripts/script.js"></script>
   </body>
 </html>
